# disk-space-guardian

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml  release.yml
.kbd-orchestrator/: constraints.md  current-waypoint.json  current-waypoint.md  position-reminder.txt  project.json
.kbd-orchestrator/phases/dsg-cli-foundation/: assessment.md  goals.md  hooks.log.jsonl  plan.md  progress.json
.kbd-orchestrator/phases/dsg-cli-foundation/handoffs/: assess.handoff.json  plan.handoff.json
.kbd-orchestrator/phases/dsg-cli-foundation/sycophancy/: assess-2026-07-02T17-29-04Z.json  plan-2026-07-02T17-33-06Z.json
.prometheus/: events.jsonl
.prometheus/knowledge/wiki/: executor-session-completion-for-dsg-cli-foundation-change-unknown.md  index.md  log.md  session-completion-record-for-dsg-cli-foundation-change-unknown.md  session-status-snapshot-2026-07-02t17-01-14z.md  session-status-snapshot-2026-07-02t17-02-14z.md  session-status-snapshot-2026-07-02t17-23-11z.md  session-status-snapshot-2026-07-02t17-25-37z.md  session-status-snapshot-2026-07-02t17-30-04z.md  session-status-snapshot-2026-07-02t17-32-19z.md  session-status-snapshot-2026-07-02t17-34-47z.md
docs/: Prometheus Base Rules Set.md  README.md  decisions.md
dsg/: Cargo.toml
dsg/src/: config.rs  ecosystems.rs  main.rs  safety.rs  scanner.rs
openspec/changes/change-001-establish-capability-specs/: proposal.md  tasks.md
openspec/changes/change-002-scaffold-workspace-cli/: proposal.md  tasks.md
openspec/specs/: cli.md  config.md  safety.md  scanner.md
