[package]
name = "dsg"
version = "0.1.0"
edition = "2021"
description = "Intelligent, safety-first disk space management for developer workstations"
license = "MIT"

[[bin]]
name = "dsg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
humansize = "2"
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
trash = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
